--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "godotTools.editorPath.godot4": "c:\\Users\\micha\\Godot_v4.4.1-stable_win64.exe"
+  "godotTools.editorPath.godot4": "c:\\Users\\micha\\OneDrive\\Desktop\\Godot_v4.4.1-stable_win64.exe"
 }
